# agentic-ai-accounting

./: .gitignore  CLAUDE.md  KTP_APPLICATION_PROMPT.md  PORTFOLIO.md  README.md  SETUP.txt  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 977338c326f1_initial_schema.py  a1b2c3d4e5f6_add_last_sync_at_to_organisations.py  b2c3d4e5f6a7_resize_embedding_vector_to_384.py  c3d4e5f6a7b8_add_generated_documents_table.py  d4e5f6a7b8c9_add_users_table.py  e5f6a7b8c9d0_add_jobs_table.py
backend/app/: main.py
backend/app/agents/: categoriser.py  reconciler.py
backend/app/api/v1/: auth.py  categorise.py  dashboard.py  documents.py  explanations.py  gdpr.py  health.py  jobs.py  reconcile.py  sync.py  webhooks.py
backend/app/core/: cache.py  config.py  database.py  email.py  encryption.py  jobs.py  observability.py  rate_limit.py  session.py
backend/app/integrations/: xero_adapter.py
backend/app/models/: database.py  schemas.py
backend/app/services/: document_service.py  embedding_service.py
backend/app/templates/: management_letter.html  profit_loss.html  vat_summary.html
backend/app/xai/: explainer.py  fuzzy_engine.py
backend/evals/: README.md  cost_tracker.py  eval_runner.py  response_cache.py
backend/evals/fixtures/: accounts.json  transactions.json
backend/tests/: test_categorise.py  test_documents.py  test_email.py  test_encryption.py  test_health.py  test_jobs.py  test_observability.py  test_rate_limit.py  test_reconcile.py  test_webhooks.py  test_xai.py  test_xero_integration.py
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/reconciliation/: page.tsx
frontend/src/app/team/: page.tsx
frontend/src/components/: app-shell.tsx  aurora.tsx  error-boundary.tsx  explanation-panel.tsx  fluid-glass-button.tsx  gradient-text.tsx  sidebar.tsx
frontend/src/lib/: api.ts
(+2 files in other folders)
